@@ -350,6 +350,7 @@
 #define IDS_PROGRS_TITLE_ADD            1229
 #define IDC_HIDEPATHS                   1229
 #define IDS_PROGRS_TITLE_REVERT         1230
+#define IDC_WCURLFROM                   1230
 #define IDS_PROGRS_TITLE_RESOLVE        1231
 #define IDS_PROGRS_TITLE_SWITCH         1232
 #define IDS_PROGRS_TITLE_EXPORT         1233
@@ -564,6 +565,7 @@
 #define IDS_SETTINGS_AUTOCOMPLETION_TT  3114
 #define IDS_SETTINGS_AUTOCOMPLETIONTIMEOUT_TT 3115
 #define IDS_SETTINGS_RECURSIVE_TT       3116
+#define IDS_SETTINGS_USEWCURL_TT        3117
 #define IDS_CHECKNEWER_YOURVERSION      3200
 #define IDS_CHECKNEWER_CURRENTVERSION   3201
 #define IDS_CHECKNEWER_YOURUPTODATE     3202
@@ -667,7 +669,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        207
 #define _APS_NEXT_COMMAND_VALUE         32789
-#define _APS_NEXT_CONTROL_VALUE         1230
+#define _APS_NEXT_CONTROL_VALUE         1231
 #define _APS_NEXT_SYMED_VALUE           195
 #endif
 #endif
